# codi

./: CMakeLists.txt
cli_automation/: CMakeLists.txt  cli_api.cpp  cli_api.h  cli_automation.cpp  cli_automation.h  cli_stdio.cpp  cli_stdio.h  cli_winapi.h
cli_automation/lib/: utils.h
cli_automation/lib/io/files/: files.cpp  files.h
cli_automation/lib/io/std/: std.cpp  std.h
cli_automation/lib/json/: json.h
cli_automation/lib/string/: string.cpp  string.h
